# arbiter

./: .coverage 2  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  ARBITER.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DESIGN_SPEC.md  IMPLEMENTATION_SPEC.md  Makefile  PROJECT_PLAN.md  PROJECT_TODO.md  README.md  ROADMAP.md  TODO.md  TRANSFER_CHECKLIST.md  manual_test_pretty_print.py  mkdocs.yml  pyproject.toml  test_examples.sh  verify_pretty_print.py
.github/workflows/: publish-to-pypi.yml
arbiter/: __init__.py  api.py
arbiter/core/: __init__.py  cost_calculator.py  interfaces.py  llm_client.py  middleware.py  models.py  registry.py
arbiter/evaluators/: __init__.py  base.py  custom_criteria.py  factuality.py  groundedness.py  pairwise.py  relevance.py
arbiter/storage/: __init__.py  base.py  postgres.py  redis.py
arbiter/tools/: __init__.py
arbiter/verifiers/: __init__.py  base.py
arbiter_ai/: __init__.py  api.py  cli.py
arbiter_ai/core/: __init__.py  config.py  cost_calculator.py  estimation.py  exceptions.py  llm_client.py  llm_client_pool.py  middleware.py  models.py  monitoring.py  registry.py  retry.py
arbiter_ai/core/middleware/: __init__.py  base.py  cache_backends.py  caching.py  logging_mw.py  metrics.py  monitor.py  rate_limiting.py
arbiter_ai/evaluators/: __init__.py  base.py  custom_criteria.py  factuality.py  groundedness.py  instruction_following.py  relevance.py  similarity_backends.py
arbiter_ai/storage/: __init__.py  base.py  postgres.py  redis.py
arbiter_ai/verifiers/: base.py  citation_verifier.py
assets/: ai_tinkerers_jan_2025.md
docs/: index.md  quickstart.md
docs/api/: evaluate.md  index.md
examples/: advanced_config.py  basic_evaluation.py  batch_evaluation_example.py  batch_manual.py  caching_example.py  circuit_breaker_example.py  cost_comparison.py  cost_estimation_example.py  cost_tracking_example.py  custom_criteria_example.py  debugging_multi_call.py  error_handling_example.py  evaluating_langchain_outputs.py  evaluator_registry_example.py  factuality_comprehensive_demo.py  factuality_example.py  factuality_with_verification.py  faiss_semantic_example.py  fastapi_integration.py  groundedness_example.py  health_check_example.py  instruction_following_demo.py  instruction_following_example.py  interaction_tracking_example.py  langchain_integration.py  logging_example.py  middleware_usage.py  multiple_evaluators.py  observability_example.py  pairwise_comparison_example.py  pairwise_evaluate_example.py  pretty_print_example.py  production_deployment_example.py  provider_switching.py  rag_evaluation.py  relevance_example.py  storage_postgres_example.py  storage_redis_example.py  test_verifiers_simple.py
migrations/: env.py
migrations/versions/: 94176ccd39d2_create_arbiter_schema_and_tables.py
scripts/: update_github_urls.sh  update_package_name.sh
tests/: conftest.py
tests/unit/: test_api.py  test_batch_evaluate.py  test_circuit_breaker.py  test_cli.py  test_config.py  test_cost_calculator.py  test_custom_criteria.py  test_error_handling.py  test_estimation.py  test_evaluator_naming_consistency.py  test_factuality.py  test_groundedness.py  test_instruction_following.py  test_llm_client.py  test_llm_client_pool.py  test_logging.py  test_middleware.py  test_model_methods.py  test_models.py  test_monitoring.py  test_pairwise.py  test_pairwise_middleware.py  test_pretty_print.py  test_registry.py  test_relevance.py  test_retry.py  test_similarity_backends.py  test_storage_base.py  test_storage_postgres.py  test_storage_redis.py  test_validation.py  test_verifiers.py
